--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_EXAMPLE: ENC[AES256_GCM,data:xQJ7sbeiIAJFMDtlzzPBDMI1zQE4NPl4BqwK0EnO7zAJhnht0o0lBrFESoaF1miWyXU0nrS1iKGE6dgNlfG1E1ICvMF++Oxf34eq4wQhYLZOUJ23yyFwUz2zkw7tEw==,iv:rsmBGf8HhbfYQmGldGuKGcR9t2bPOJX8LlrPGA9SfPU=,tag:OJUgEFt/w8bROC0oOYLpuA==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:M1fSl9tPg10=,iv:s9+aHy7qxqmcdPo1GmP1G/XeySdoOwyy6WOOB/lq2Ao=,tag:N4rZsRQmQLFsLGEFgUdeew==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:vX3QglsqjTWfFEjjIXhWYZ3TS3TwIu3uFLiYyl0=,iv:SQ3eIZZ3vEjD8aSDpfiehjMdQDnMyniqX/tbmAi7KlA=,tag:vCizZRA0iw6+6lgviKy1sw==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:g7QPSZJSmKelsVloCG3AvYFIbkEvskHs/zF6VJSt7aNKNCLn,iv:9ImTujY/2yWW4DRNjhqoeO4vGuTLHU9Eo1hRwAUaab8=,tag:getGD2XiisumuE36q2Fp0Q==,type:str]
+    SECRET_EXAMPLE: ENC[AES256_GCM,data:jeS2LkbWoS7/kX36xsYqEGl2qK64H7DD6dYG+/63faBq8G54qm1oCmRZJaorv4ysU6jphcjDSwP35m/iPuBEr9t/y7bpp12Vlhn+sMsrjCe0JfghfBHvtZDwsjUIpg==,iv:q6Y7VMlDqdbyKdjQrMi8+LZjgY4EzJowNGCil+stbMg=,tag:FvskhJbkuI8QEFkmBYu32A==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:+7oAhJSnXCQ=,iv:dWgHbdWr1JK/mDufCOhd0UPRGzRAnhCllrfAznmnBZc=,tag:1540pME6s1ndIM4642lulQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:JWC+YkkRprvwpAXvEP84vXAKcGd29fn12XYQmiw=,iv:0hPzfqVSbJcaPpKDaCbyxxXn8gthn7am+ZmIyMZ/AX0=,tag:Vhp9GKLc1unN2o4m0L4x1Q==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:phAQJbZXokzrCEBhrCADaQP7MI4CVfueZOZtHRKvH/uSdk31,iv:ul2SRN9pAwCN+XxEk+011kOB+ne3S+rVK8hWGjdZhM4=,tag:j+sWXmBD7J2dJWfo3bzw0A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age1mhnr8fvmul5cuwxxw5yfe9g9ztqga60f4c3zu5e4lrymfvwahegqyfqkp9
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsU0ZZTGJnckhzNzViU01D
-            eGI2bGpoTUoxdThaOHEvbkdjYmN2am9wSUM4Cmp1T040L1NmcEJ5K1JmelR2bmtu
-            R1l4TkhFSmtOZ2Z6Zm83TkpQTDZoWVkKLS0tIHJtU0xRTW16Y2pOSHR1ajJkc2xx
-            SEIrbjZMNVBtd2tDRlp5QjRDOXNmSkEKO5nPDHKVp2tDrOeCWKphgSjOaXdhEwfd
-            HTcxFSfQnqVoxtvcgNWGbcrO+VAfEwS1v/oRgI9sHbcgkerczz4mYg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0UFQzMHZweTVkbC83VTU5
+            L3hYeUFNRUdXVmxPUlRwb0pWdzZSZkQ1VldvCkxMRGRYbzhLbTAxMXNWSnkyWHBW
+            MStrb2FDOUU1b2QzSEhaakYxdnNUbkUKLS0tIGN1aE9KekJQYUdIVGg4ekV3V1lU
+            bGNkTG90L2h1Z3ZnMlJ5WWZBam1aa00KhKwC6C4EBs1hT6lSdGRtb8RlIntNKDAR
+            8dephBwFvfswiLtC2Tr9x+cXCSGk4DiMxJYPy/agXdSk4tA+olm3tw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-06T07:13:39Z"
-    mac: ENC[AES256_GCM,data:AGOkk/27w3D+9Y1BJNEgG171ZaaW2DfhorbGv0wQ/5eU1TwlxpdvAFE51KHdIstchJTp0Hwh8OM60KSkbpjbiT31t5cLuxJEzXIbGRvQAs9b43lMPTRkcktx82qv9FlTkdNKgn1Gd2SqY4wfnBPLm14cWI0QJUbYKKNoyDKWiTQ=,iv:B8Cm7W14N2SwK0P+ZTxbeDqj9Og6uYlspHpJfurf85k=,tag:C/m9PiV2UmoQVEHycSNemA==,type:str]
+    lastmodified: "2024-05-06T07:23:26Z"
+    mac: ENC[AES256_GCM,data:h3yevLSPp4khVbYXDq8uCBt7BkM3h1dZf65wMz8FDDmLaLvgRqf3odE4r9PdNZUHBlO+eZt34WMR5DMq5XR3Gww7/D1eXnc91z4O9dHl11TQaEv6SjZxM7FKuJh+iRo9bt+2TSdIvMDIeMCD2LqIhGiW9kfYb/zU5w41zqFOUbI=,iv:zGjJ7ufFoUd3aSjOjuiHIUSOITSawMI+F8dhXAxqV0M=,tag:mJ1avrqdCZ/hBH26T00Y3Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
