--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -6,4 +6,4 @@ kubernetes:
         "k8s-1":
           ansible_user: "pukka"
           ansible_host: "10.0.12.129"
-          ansible_ssh_private_key_file: "/Users/kchou/.ssh/id_ed25519"
+          ansible_ssh_private_key_file: "/Users/kchou/.ssh/id_ed25519_pukka"
