--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_EXAMPLE: ENC[AES256_GCM,data:jeS2LkbWoS7/kX36xsYqEGl2qK64H7DD6dYG+/63faBq8G54qm1oCmRZJaorv4ysU6jphcjDSwP35m/iPuBEr9t/y7bpp12Vlhn+sMsrjCe0JfghfBHvtZDwsjUIpg==,iv:q6Y7VMlDqdbyKdjQrMi8+LZjgY4EzJowNGCil+stbMg=,tag:FvskhJbkuI8QEFkmBYu32A==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:+7oAhJSnXCQ=,iv:dWgHbdWr1JK/mDufCOhd0UPRGzRAnhCllrfAznmnBZc=,tag:1540pME6s1ndIM4642lulQ==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:JWC+YkkRprvwpAXvEP84vXAKcGd29fn12XYQmiw=,iv:0hPzfqVSbJcaPpKDaCbyxxXn8gthn7am+ZmIyMZ/AX0=,tag:Vhp9GKLc1unN2o4m0L4x1Q==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:phAQJbZXokzrCEBhrCADaQP7MI4CVfueZOZtHRKvH/uSdk31,iv:ul2SRN9pAwCN+XxEk+011kOB+ne3S+rVK8hWGjdZhM4=,tag:j+sWXmBD7J2dJWfo3bzw0A==,type:str]
+    SECRET_EXAMPLE: ENC[AES256_GCM,data:b/eSHnaTpPOOC2ygVpwnISqJW6N1ttKT4/R/kd3WnH3zQJCEArUHrFtLDfWY/UyIv5a34Kg/M+yc/exR/Vn7GwilhPpsRpyEbbvAeX5yOd3kN5s4Y6fnAb/nKqMw3g==,iv:DJM4b/a1QliDT7cQnGhjkptA3ECO3l/v7mvyaIuEdpU=,tag:oiAd0LKEvBSpEMQlstTaZA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:CVQQ5uyhhuY=,iv:BEpqRtQkBNGp54QO8u+NYZ5rHHUWKK3U7kdCNFudgiw=,tag:rlUH1G6PzPzodk9zx+SkZQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:yFA0JvsUQk50cy5ONKi29Tp07SG4BhIX9sQ+pgE=,iv:OvfS/oAt5oIwTejxuJC8LiHMcawV9JhGpjr3nYuvnxI=,tag:1ZdQDBQ9mEJkKjTAVzHtLg==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:sEwy4L26kmJSJtCe0dGgCJwU975MubBW6q8lxqpmaT6zExIF,iv:vIJvMuthNlbkYI2SPg35ThEZ+ki6fx5rgatb6eanqdo=,tag:aUw/VeVm02s0DnzMgNOM7g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age1mhnr8fvmul5cuwxxw5yfe9g9ztqga60f4c3zu5e4lrymfvwahegqyfqkp9
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0UFQzMHZweTVkbC83VTU5
-            L3hYeUFNRUdXVmxPUlRwb0pWdzZSZkQ1VldvCkxMRGRYbzhLbTAxMXNWSnkyWHBW
-            MStrb2FDOUU1b2QzSEhaakYxdnNUbkUKLS0tIGN1aE9KekJQYUdIVGg4ekV3V1lU
-            bGNkTG90L2h1Z3ZnMlJ5WWZBam1aa00KhKwC6C4EBs1hT6lSdGRtb8RlIntNKDAR
-            8dephBwFvfswiLtC2Tr9x+cXCSGk4DiMxJYPy/agXdSk4tA+olm3tw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwM211eDQyY1lSb1I1VWFu
+            Q0RMcGFOMVgvS25raWd6WlBMMmxtaTNSaXhZCjlpWThlVmo1ay9HcVRxMjcwOEpG
+            ZE16NlRpSkxHVGtTYWJxNElnYWo3SVEKLS0tIGhPcWdGeGxaWDU2V2Q5UXdjTTNY
+            d0ZkVjVRSzlCVUNMbm1iNXN2bFFKR00KIGBMMqDc4pRp6fToKuY772gBrmKcx7zG
+            oVll8gWVAeuRcuMUxV6oQjw75DwLJHBwODkcV30jG7RaLi1NPHX1rw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-06T07:23:26Z"
-    mac: ENC[AES256_GCM,data:h3yevLSPp4khVbYXDq8uCBt7BkM3h1dZf65wMz8FDDmLaLvgRqf3odE4r9PdNZUHBlO+eZt34WMR5DMq5XR3Gww7/D1eXnc91z4O9dHl11TQaEv6SjZxM7FKuJh+iRo9bt+2TSdIvMDIeMCD2LqIhGiW9kfYb/zU5w41zqFOUbI=,iv:zGjJ7ufFoUd3aSjOjuiHIUSOITSawMI+F8dhXAxqV0M=,tag:mJ1avrqdCZ/hBH26T00Y3Q==,type:str]
+    lastmodified: "2024-05-06T07:57:42Z"
+    mac: ENC[AES256_GCM,data:UFP7JZVmRq3jjj1tWIMqw0irrnI9wiYgVhA3YI0dN852irozL7wGnk7/zMZHWiUNqPcUwPmhcJzR9XVoA/RmfwRWFE3Dd2vuIzBN1YGZN7zfl7HrJ9bp6/qxeYqJDkbtY8iu5nt+eoSKPtb3dYW12fLAF6uKAqeps81LK/NQT1A=,iv:5iphWbJjt7bQ1kmCdti5FWLrWt9Ztm3irxTMp4W7CfA=,tag:YJYIQIzqHVD4vtATfPbSpQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
